--- a/RobotSoftware/GUI/gui.ui
+++ b/RobotSoftware/GUI/gui.ui
@@ -43,7 +43,7 @@
      <string notr="true">background-color: qlineargradient(spread:pad, x1:0.03, y1:0.955, x2:1, y2:0, stop:0 rgba(175, 175, 175, 57), stop:1 rgba(255, 255, 255, 255))</string>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <property name="iconSize">
      <size>
@@ -213,7 +213,7 @@
        <widget class="QLabel" name="light_stt">
         <property name="geometry">
          <rect>
-          <x>20</x>
+          <x>10</x>
           <y>200</y>
           <width>41</width>
           <height>41</height>
@@ -304,6 +304,35 @@ border-style:inset;</string>
         </property>
         <property name="text">
          <string>Device 2</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="btn_renew_ports">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>150</y>
+          <width>31</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icon_reset.png</normaloff>icon_reset.png</iconset>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
+        <property name="default">
+         <bool>false</bool>
+        </property>
+        <property name="flat">
+         <bool>false</bool>
         </property>
        </widget>
       </widget>
@@ -3631,13 +3660,37 @@ border-style:inset;</string>
          <pointsize>9</pointsize>
         </font>
        </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
-        <string notr="true">border: 1px solid #000000;</string>
+        <string notr="true">background:transparent; margin-left: 8px;</string>
        </property>
        <property name="text">
         <string>Working Area</string>
        </property>
       </widget>
+      <widget class="QListView" name="listView_6">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>300</y>
+         <width>131</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: 2px solid #000000;</string>
+       </property>
+      </widget>
+      <zorder>listView_6</zorder>
+      <zorder>frame_7</zorder>
+      <zorder>size_view</zorder>
+      <zorder>obj_view</zorder>
+      <zorder>logo_view</zorder>
+      <zorder>groupBox</zorder>
+      <zorder>groupBox_10</zorder>
+      <zorder>cbox_working_area</zorder>
      </widget>
     </widget>
     <widget class="QWidget" name="data_tab">
@@ -3684,11 +3737,25 @@ border-style:inset;</string>
         <string notr="true">border: 1px solid; background: #FFFFFF</string>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
-       <widget class="QWidget" name="page_0"/>
+       <widget class="QWidget" name="page_0">
+        <widget class="QCalendarWidget" name="calendarWidget">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>30</y>
+           <width>411</width>
+           <height>281</height>
+          </rect>
+         </property>
+         <property name="gridVisible">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </widget>
        <widget class="QWidget" name="page_1">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="btn_refresh_table">
          <property name="geometry">
           <rect>
            <x>10</x>
@@ -3714,7 +3781,7 @@ border-style:inset;</string>
           <bool>false</bool>
          </property>
         </widget>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="btn_export_table">
          <property name="geometry">
           <rect>
            <x>120</x>
@@ -3893,7 +3960,7 @@ border-style:inset;</string>
         </widget>
        </widget>
       </widget>
-      <widget class="QLabel" name="label_64">
+      <widget class="QLabel" name="lb_info_page">
        <property name="geometry">
         <rect>
          <x>880</x>
@@ -3993,7 +4060,7 @@ border-style:inset;</string>
         <string>Product filter</string>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox">
+      <widget class="QCheckBox" name="cbox_error">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -4009,6 +4076,9 @@ border-style:inset;</string>
          <bold>true</bold>
         </font>
        </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
         <string notr="true">background:transparent;</string>
        </property>
@@ -4016,7 +4086,7 @@ border-style:inset;</string>
         <string>Error</string>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_2">
+      <widget class="QCheckBox" name="cbox_not_error">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -4032,6 +4102,9 @@ border-style:inset;</string>
          <bold>true</bold>
         </font>
        </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
         <string notr="true">background:transparent;</string>
        </property>
@@ -4039,7 +4112,7 @@ border-style:inset;</string>
         <string>Not Error</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_67">
+      <widget class="QLabel" name="lb_quantity">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -4073,7 +4146,7 @@ border-style:inset;</string>
         <string notr="true">background: #FFFFFF; border: 2px solid #000000;</string>
        </property>
       </widget>
-      <widget class="QComboBox" name="comboBox">
+      <widget class="QComboBox" name="cb_size">
        <property name="geometry">
         <rect>
          <x>110</x>
@@ -4111,7 +4184,7 @@ border-style:inset;</string>
         </property>
        </item>
       </widget>
-      <widget class="QComboBox" name="comboBox_2">
+      <widget class="QComboBox" name="cb_color">
        <property name="geometry">
         <rect>
          <x>110</x>
@@ -4222,7 +4295,7 @@ border-style:inset;</string>
         <string>Color:</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="btn_filter">
        <property name="geometry">
         <rect>
          <x>110</x>
@@ -4251,6 +4324,19 @@ border-style:inset;</string>
        </property>
        <property name="shortcut">
         <string/>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="btn_next_page">
+       <property name="geometry">
+        <rect>
+         <x>830</x>
+         <y>840</y>
+         <width>41</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>--&gt;</string>
        </property>
       </widget>
      </widget>
@@ -4297,6 +4383,9 @@ border-style:inset;</string>
          <bold>true</bold>
         </font>
        </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0,0,255);</string>
+       </property>
        <property name="title">
         <string>Pretrained Calib Model</string>
        </property>
@@ -4316,6 +4405,9 @@ border-style:inset;</string>
           <bold>false</bold>
          </font>
         </property>
+        <property name="styleSheet">
+         <string notr="true">color: black;</string>
+        </property>
        </widget>
        <widget class="QLabel" name="label_44">
         <property name="geometry">
@@ -4334,7 +4426,7 @@ border-style:inset;</string>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background: transparent;</string>
+         <string notr="true">background: transparent;color: black;</string>
         </property>
         <property name="text">
          <string>Model:</string>
@@ -4358,6 +4450,9 @@ border-style:inset;</string>
         <property name="cursor">
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
+        <property name="styleSheet">
+         <string notr="true">color :black;</string>
+        </property>
         <property name="text">
          <string>Apply</string>
         </property>
@@ -4379,6 +4474,9 @@ border-style:inset;</string>
           <italic>false</italic>
           <bold>false</bold>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: black;</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
@@ -4505,7 +4603,7 @@ border-style:inset;</string>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">color: rgb(255,0,0);</string>
        </property>
        <property name="title">
         <string>Customize New Model</string>
@@ -4530,7 +4628,7 @@ border-style:inset;</string>
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="styleSheet">
-         <string notr="true">background: rgb(235,235,235)</string>
+         <string notr="true">background: rgb(235,235,235); color: rgb(0,0,0);</string>
         </property>
         <property name="text">
          <string>On Mode</string>
@@ -4558,6 +4656,9 @@ border-style:inset;</string>
         <property name="cursor">
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0,0,0);</string>
+        </property>
         <property name="text">
          <string> PrtSc</string>
         </property>
@@ -4584,6 +4685,9 @@ border-style:inset;</string>
         <property name="cursor">
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0,0,0);</string>
+        </property>
         <property name="text">
          <string>Calibrate</string>
         </property>
@@ -4609,6 +4713,9 @@ border-style:inset;</string>
         </property>
         <property name="cursor">
          <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0,0,0);</string>
         </property>
         <property name="text">
          <string>Save</string>
@@ -4637,7 +4744,7 @@ border-style:inset;</string>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background: transparent;</string>
+         <string notr="true">background: transparent;color: rgb(0,0,0);</string>
         </property>
         <property name="text">
          <string>Insert name of new model:</string>
@@ -4955,7 +5062,7 @@ calibrate the camera</string>
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">border: 1px solid #000000;background-color:rgb(254, 20, 43);color: #000000;</string>
+           <string notr="true">border: 2px solid #000000;background-color:rgb(255, 140, 74);color: #000000;</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::NoFrame</enum>
@@ -5579,7 +5686,7 @@ p, li { white-space: pre-wrap; }
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">border: 1px solid #000000;background-color:rgb(254, 220, 43);color: #000000;</string>
+           <string notr="true">border: 2px solid #000000;background-color:rgb(221, 221, 221);color: #000000;</string>
           </property>
           <property name="text">
            <string>CONVEYOR SPEED</string>
