--- a/RobotSoftware/GUI/gui.ui
+++ b/RobotSoftware/GUI/gui.ui
@@ -1901,7 +1901,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>190</x>
           <y>30</y>
-          <width>101</width>
+          <width>121</width>
           <height>20</height>
          </rect>
         </property>
@@ -1916,7 +1916,7 @@ p, li { white-space: pre-wrap; }
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>New Point</string>
+         <string>On Teaching</string>
         </property>
        </widget>
        <widget class="QTextBrowser" name="txt_info_teaching">
